--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "visaservi",
   "private": true,
+  "homepage": "https://lealmasa.github.io/visaServi/",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d dist",
     "build": "vite build",
     "preview": "vite preview"
   },
