--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "visaservi",
-  "homepage": "https://lealmasa.github.io/visaServi",
+  "homepage": "https://lealmasa.github.io/visaServi/",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
