--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "visaservi",
-  "homepage": "https://lealmasa.github.io/visaServi/",
+  "homepage": "https://visaservi.com/",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
@@ -11,8 +11,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.9.1",
+    "framer-motion": "^7.6.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^1.3.0",
     "react-router-dom": "^6.4.2",
     "react-router-hash-link": "^2.4.3"
   },
