--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-router-dom": "^6.4.2",
-    "react-router-hash-link": "^2.4.3"
+    "react-router-hash-link": "^2.4.3",
+    "react-toastify": "^9.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
@@ -28,6 +29,6 @@
     "postcss": "^8.4.18",
     "postcss-cli": "^10.0.0",
     "tailwindcss": "^3.1.8",
-    "vite": "^3.1.0"
+    "vite": "^3.2.3"
   }
 }
